--- a/mska_og/configs/phoenix2014-T.yaml
+++ b/mska_og/configs/phoenix2014-T.yaml
@@ -1,36 +1,31 @@
-data_path: /home/ahmedubc/projects/aip-lsigal/ahmedubc/datasets
-datasets: ["CSL-Daily", "phoenix2014-T"]
+task: S2G
+device: cuda
+do_translation: False
+do_recognition: True
+data:
+  train_label_path: /Users/gufran/Developer/data/sign/phoenix2014-T/pose.train
+  dev_label_path: /Users/gufran/Developer/data/sign/phoenix2014-T/pose.dev
+  test_label_path: /Users/gufran/Developer/data/sign/phoenix2014-T/pose.test
+  max_length: 500
+  dataset_name: phoenix2014-T
+  input_streams: keypoint
+  level: word #word or char
+  txt_lowercase: true
+  max_sent_length: 400
 
-skld_weight: 25
-
-training:
-  validation:
-    recognition:
-      beam_size: 1
-    translation: {}
-    
-  optimization:
-    patience: 16
-    optimizer: Adam
-    learning_rate:
-      default: 0.0001
-    weight_decay: 0.001
-    betas:
-      - 0.9
-      - 0.998
-    scheduler:
-      name: plateau
-      patience: 5
-      factor: 0.2
-      step: [20, 25, 30, 35, 40, 45]
-    
-    t_max: 100
-
+gloss:
+  gloss2id_file: data/phoenix2014-T/gloss2ids.pkl
 testing:
   recognition:
     beam_size: 5
   translation: {}
-
+training:
+  wandb: disabled # online or disabled
+  model_dir: outputs/phoenix2014-T_SLR
+  validation:
+    recognition:
+      beam_size: 1
+    translation: {}
   optimization:
     optimizer: Adam
     learning_rate:
@@ -39,16 +34,11 @@ testing:
     betas:
       - 0.9
       - 0.998
-    scheduler: plateau
+    scheduler: cosineannealing
     t_max: 100
-
 model:
   RecognitionNetwork:
     input_type: keypoint
-
-    GlossTokenizer:
-      gloss2id_file: data/CSL-Daily_phoenix2014-T/gloss2ids.pkl
-    
     DSTA-Net:
       net: [[64, 64, 16, 7, 2], [64, 64, 16, 3, 1],
             [64, 128, 32, 3, 1], [128, 128, 32, 3, 1],
@@ -61,38 +51,38 @@ model:
       right: [0,2,4,6,8,10,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132]
       face: [23,26,29,33,36,39,41,43,46,48,53,56,59,62,65,68,71,72,73,74,75,76,77,79,80,81]
       mouth: [71,72,73,74,75,76,77,79,80,81]
-
-
-    hidden_size: 1024
-
+    GlossTokenizer:
+      gloss2id_file: data/phoenix2014-T/gloss2ids.pkl
     body_visual_head:
       input_size: 256
-      hidden_size: 1024
+      hidden_size: 512
       ff_size: 2048
+      pe: True
       ff_kernelsize:
         - 3
         - 3
-        
     fuse_visual_head:
       input_size: 1024
-      hidden_size: 1024
+      hidden_size: 512
       ff_size: 2048
+      pe: True
       ff_kernelsize:
         - 3
         - 3
-
     left_visual_head:
       input_size: 512
-      hidden_size: 1024
+      hidden_size: 512
       ff_size: 2048
+      pe: True
       ff_kernelsize:
         - 3
         - 3
-
     right_visual_head:
       input_size: 512
-      hidden_size: 1024
+      hidden_size: 512
       ff_size: 2048
+      pe: True
       ff_kernelsize:
         - 3
         - 3
+    cross_distillation: True
